--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@angular/common": "~8.2.7",
     "@angular/compiler": "~8.2.7",
     "@angular/core": "~8.2.7",
+    "@angular/fire": "^6.0.3",
     "@angular/forms": "~8.2.7",
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@babel/compat-data": "7.8.0",
+    "firebase": "^7.21.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "@babel/compat-data": "7.8.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
